--- a/SongListApp/appsettings.json
+++ b/SongListApp/appsettings.json
@@ -1,4 +1,6 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=SongsDB;User Id = sa;Password=Odfakujte2209;TrustServerCertificate=true;"},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
