--- a/TODO.CoreHosted/Server/appsettings.json
+++ b/TODO.CoreHosted/Server/appsettings.json
@@ -1,9 +1,16 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=SongsDB;User Id = sa;Password=Odfakujte2209;TrustServerCertificate=true;"},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ServerContext": "Data Source=ServerContext-323f7b19-f4ef-482b-94d4-8d429cf57b43.db",
+    "ServerContext1": "Data Source=ServerContext1-735aea61-66d1-446f-b5cd-06223c808290.db",
+    "Data": "Data Source=Data-80377e22-4081-4a17-a9c0-f1238f2a6460.db"
+  }
 }
